opam-version: "2.0"
name: "five"
version: "0.1"
synopsis: "One-line description"
description: """
Longer description
"""
maintainer: "Ty Overby <ty@pre-alpha.com>"
authors: "Ty Overby <ty@pre-alpha.com>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: ["dune" "base" "ctypes" "ctypes-foreign"] 
build: [ ["./scripts/build" ] ]
install: [make "install"]
